--- a/src/SmartGallery.Services/SmartGallery.Services.csproj
+++ b/src/SmartGallery.Services/SmartGallery.Services.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SmartGallery.Data\SmartGallery.Data.csproj" />
     <ProjectReference Include="..\SmartGallery.Domain\SmartGallery.Domain.csproj" />
   </ItemGroup>
 
