File upload POC

--- a/.gitignore
+++ b/.gitignore
@@ -395,3 +395,4 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+/src/SmartGallery.Web/1.png
