--- a/src/SmartGallery.Web/ClientApp/package.json
+++ b/src/SmartGallery.Web/ClientApp/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
+    "ng2-file-upload": "^1.3.0",
     "popper.js": "^1.14.3",
     "rxjs": "^6.5.1",
     "zone.js": "^0.8.29"
